fix: introduced an alternate way to detect extras
fixes #969